--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "dependencies": {
     "botbuilder": "^3.8.4",
-    "restify": "^5.0.0"
+    "client-oauth2": "^4.1.0",
+    "restify": "^5.0.0",
+    "yelp": "^1.0.2",
+    "yelp-api-v3": "^1.5.0"
   },
   "devDependencies": {
     "request": "^2.81.0",
